--- a/package.json
+++ b/package.json
@@ -76,8 +76,10 @@
     "eslint-plugin-react": "^7.29.4",
     "eslint-plugin-react-hooks": "^4.5.0",
     "eslint-plugin-storybook": "^0.5.12",
+    "husky": "^8.0.1",
     "jest": "^28.1.0",
     "jest-environment-jsdom": "^28.1.0",
+    "lint-staged": "^12.4.2",
     "prettier": "^2.6.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -95,5 +97,11 @@
     "node": "^14.19.0",
     "npm": "^6.14.16"
   },
-  "repository": ""
+  "repository": "",
+  "lint-staged":{
+      "**/*.{js,jsx,ts,tsx}":[
+        "npm run format:fix",
+        "npm run lint:fix"
+      ]
+    }
 }
