--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,7 +5,7 @@ on:
       - "**"
 jobs:
   ci:
-    name: CI
+    name: CI2
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
