--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,9 +1,10 @@
 name: Checks
 on:
-  push:
-    branches:
-      - "**"
   pull_request:
+    types: 
+      - opened
+      - synchronize
+      - reopened
     branches:
       - "**"
 jobs:
