--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,22 +1,28 @@
 name: Checks
+
 on:
   pull_request:
+    branches:
+      - "**"
     types: 
       - opened
       - synchronize
       - reopened
-    branches:
-      - "**"
+
 jobs:
   ci:
     name: CI
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v1
-      - uses: actions/setup-node@v1
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Setup Node.js
+        uses: actions/setup-node@v1
         with:
           node-version: 14
-      - run: npm install
+      - name: Install dependencies
+        run: npm install
       - name: Lint
         run: npm run lint
       - name: Tests
