--- a/.github/workflows/publish-from-master.yml
+++ b/.github/workflows/publish-from-master.yml
@@ -2,8 +2,10 @@ name: Release
 
 on: 
   pull_request:
-    branches: [master]
-    types: [closed]
+    branches: 
+      - master
+    types: 
+      - closed
 
 jobs:
   release:
