--- a/.github/workflows/publish-from-master.yml
+++ b/.github/workflows/publish-from-master.yml
@@ -1,19 +1,16 @@
 name: Publish from master
 
 on: 
-  push:
-    branches:
+  pull_request:
+    branches: 
       - master
-  # pull_request:
-  #   branches: 
-  #     - master
-  #   types: 
-  #     - closed
+    types: 
+      - closed
 
 jobs:
   publish:
     name: Publish
-    # if: ${{ github.event.pull_request.merged == true }}
+    if: ${{ github.event.pull_request.merged == true }}
     runs-on: ubuntu-latest
 
     steps:
