--- a/.github/workflows/publish-from-master.yml
+++ b/.github/workflows/publish-from-master.yml
@@ -33,4 +33,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{secrets.NPM_TOKEN}}
           NPM_CONFIG_REGISTRY: https://registry.npmjs.org:8443/
+          CI: true
+          HUSKY: 0
         run: npx semantic-release
