--- a/.github/workflows/publish-from-master.yml
+++ b/.github/workflows/publish-from-master.yml
@@ -30,7 +30,7 @@ jobs:
         run: npm run build
       - name: Release
         env:
-          GIT_CREDENTIALS: https://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@github.com/alejandro-benjumea-superworld/ui-core.git
+          GIT_CREDENTIALS: alejandro-benjumea-superworld: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
           NPM_TOKEN: ${{secrets.NPM_TOKEN}}
           NPM_CONFIG_REGISTRY: https://registry.npmjs.org:8443/
           CI: true
